--- a/ShoppingX/app/templates/app/mobile.html
+++ b/ShoppingX/app/templates/app/mobile.html
@@ -1,14 +1,38 @@
 {% extends 'app/base.html' %}
 {% load static %}
-{% block title %}Buy Now{% endblock title %}
+{% block title %}Mobile{% endblock title %}
 {% block main-content %}
 <div class="container my-5">
  <div class="row">
   <div class="col-sm-3">
-   Side Bar for Mobile filter
+   <div class="list-group">
+    <a href="{% url "mobile" %}" class="list-group-item list-group-item-action" aria-current="true">All Mobile</a>
+    <a href="{% url 'mobiledata' 'Redmi'  %}" class="list-group-item list-group-item-action" aria-current="true">Redmi</a>
+    <a href="{% url 'mobiledata' 'Samsung'  %}" class="list-group-item list-group-item-action" aria-current="true">Samsung</a>
+    <a href="{% url 'mobiledata' 'Realme'  %}" class="list-group-item list-group-item-action" aria-current="true">Realme</a>
+    <a href="{% url 'mobiledata' 'Vivo'  %}" class="list-group-item list-group-item-action" aria-current="true">Vivo</a>
+    <a href="{% url 'mobiledata' 'Infinix'  %}" class="list-group-item list-group-item-action" aria-current="true">Infinix</a>
+    <a href="{% url 'mobiledata' 'below'  %}" class="list-group-item list-group-item-action" aria-current="true">Below 10000</a>
+    <a href="{% url 'mobiledata' 'above' %}" class="list-group-item list-group-item-action" aria-current="true">Avobe 10000</a>
+
   </div>
-  <div class="col-sm-8 offset-sm-1">
-   Mobile Product List
+</div>
+
+  <div class="col-sm-8">
+   <div class="row">
+
+    {% for p in mobiles %}
+    <div class="col-sm-4 text-center mb-4">
+        <a href="{% url 'product-detail' p.id %}" class="btn">
+            <div class="item">
+                <img src="{{p.product_image.url}}" alt="" height="300" class="">
+                <div class="fw-bold">{{p.title}}</div>
+                <small class="fw-bold">{{p.discount_price}} <small class="fw-light text-decoration-line-through">{{p.selling_price}}</small></small>
+            </div>
+        </a>
+    </div>
+    {% endfor %}
+   </div>
   </div>
  </div>
 </div>
