--- a/ShoppingX/app/templates/app/home.html
+++ b/ShoppingX/app/templates/app/home.html
@@ -134,7 +134,7 @@
  
   <div class="owl-carousel" id="slider1">
    {%for l in Laptop %}
-   <a href="{% url 'product-detail' l.id %}" class="btn"><div class="item"><img src="{{l.product_image.url}}" alt="" height="350px"><span class="fw-bold">{{l.title}}</span><br><span class="fs-5">{{l.selling_price}}</span></div></a>
+   <a href="{% url 'product-detail' l.id %}" class="btn"><div class="item"><img src="{{l.product_image.url}}" alt="" height="350px"><span class="fw-bold">{{l.title}}</span><br><span class="fs-5">{{l.discount_price}}</span></div></a>
    {% endfor %}
   </div>
  </div>
