--- a/ShoppingX/app/templates/app/address.html
+++ b/ShoppingX/app/templates/app/address.html
@@ -17,7 +17,7 @@
     <div class="col-sm-6">
      <div class="card">
       <div class="card-body">
-       <h3>Address</h3>
+       <h3>Address {{forloop.counter}}</h3>
        <p>Name: {{ad.name}}</p>
        <p>locality: {{ad.locality}}</p>
        <p>zip: {{ad.zip_code}}</p>
