--- a/ShoppingX/app/templates/app/productdetail.html
+++ b/ShoppingX/app/templates/app/productdetail.html
@@ -12,8 +12,20 @@
    <hr>
    <p>{{product.description}}</p> <br>
    <h4>{{product.discount_price}} <small class="fw-light text-decoration-line-through">{{product.selling_price}}</small></h4> <br>
-   <a href="{% url 'add-to-cart' %}" class="btn btn-primary shadow px-5 py-2">Add to Cart</a>
+
+
+   {% if request.user.is_authenticated %}
+  <form action="/add-to-cart" class="d-inline">
+    <input type="hidden" name="prod_id" value="{{product.id}}" id="prod_id">
+    <button type="submit" class="btn btn-primary shadow px-5 py-2">Add to Cart</button>
    <a href="{% url 'buy-now' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
+
+  </form>
+  {% else %}
+  <div class="alert alert-danger">Login to add product in cart</div>
+  {% endif %}
+
+   
    <h5 class="mt-5">Available Offers</h5>
    <ul>
     <li>Bank Offer 5% Unlimited Cashback on Flipkart Axis Bank Credit</li>
