--- a/ShoppingX/app/templates/app/addtocart.html
+++ b/ShoppingX/app/templates/app/addtocart.html
@@ -23,12 +23,12 @@
                                 <p class="mb-2 text-muted small">Description: {{ item.product.description }}</p>
                                 <div class="my-3">
                                     <label for="quantity">Quantity:</label>
-                                    <a class="minus-cart btn"><i class="fas fa-minus-square fa-lg"></i></a>
-                                    <span id="quantity">3</span>
-                                    <a class="plus-cart btn"><i class="fas fa-plus-square fa-lg"></i></a>
+                                    <a class="minus-cart btn" pid="{{ item.product.id }}"><i class="fas fa-minus-square fa-lg"></i></a>
+                                    <span id="quantity">{{item.quantity}}</span>
+                                    <a class="plus-cart btn" pid="{{ item.product.id }}"><i class="fas fa-plus-square fa-lg"></i></a>
                                 </div>
                                 <div class="d-flex justify-content-between">
-                                    <a href="#" class="btn btn-sm btn-secondary mr-3">Remove item</a>
+                                    <a href="#" class="btn btn-sm btn-secondary mr-3 remove-item" pid="{{ item.product.id }}"> Remove item</a>
                                     <p class="mb-0"><span><strong>Rs. {{ item.product.discount_price }}</strong></span></p>
                                 </div>
                             </div>
@@ -43,13 +43,16 @@
                 <div class="card-body">
                     <h3>The Total Amount of</h3>
                     <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Amount<span>Rs. 430.00</span></li>
+                        <li
+                            class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
+                            Amount<span><span id="amount">{{amount}}</span></span></li>
+                    </ul>
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">Shipping<span>Rs. 70.00</span></li>
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div>
                                 <strong>Total</strong> <small>(including VAT)</small>
                             </div>
-                            <span><strong>Rs. 500.00</strong></span>
+                            <span><strong><strong id="totalamount">{{total_amount}}</strong></strong></span>
                         </li>
                     </ul>
                     <div class="d-grid">
